// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HideButton clicking on hidden state triggers unhide action 1`] = `
Object {
  "payload": Object {
    "key": "random-hidden-key",
  },
  "type": "cellSets/unhide",
}
`;

exports[`HideButton clicking on visible state triggers hide acction 1`] = `
Object {
  "payload": Object {
    "key": "not-hidden",
  },
  "type": "cellSets/hide",
}
`;
